--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
   <!-- or use fonts.min.css -->
   <link rel="stylesheet" href="assets/css/fonts.min.css" />
 
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+
 
 </head>
 <body class="mat-typography">
